// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a PaymentsForm component 1`] = `
<form
  className="root"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="body"
  >
    <h2
      className="heading"
    >
      Billing Information
    </h2>
    <div
      className="braintree"
    >
      <div
        className="root"
      >
        <div
          id="braintree-dropin-container"
        />
      </div>
    </div>
    <div
      className="address_check"
    >
      <label
        className="root"
      >
        <span
          className="icon"
        >
          <span
            className="root"
          >
            <svg
              fill="none"
              height={18}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={18}
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="20 6 9 17 4 12"
              />
            </svg>
          </span>
        </span>
        <input
          checked={true}
          className="input"
          name="addresses_same"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="label"
        >
          Billing address same as shipping address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
  </div>
  <div
    className="footer"
  >
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
    <button
      className="button"
      type="submit"
    >
      <span
        className="content"
      >
        Use Card
      </span>
    </button>
  </div>
</form>
`;

exports[`renders billing address fields if addresses_same checkbox unchecked 1`] = `
<form
  className="root"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="body"
  >
    <h2
      className="heading"
    >
      Billing Information
    </h2>
    <div
      className="braintree"
    >
      <div
        className="root"
      >
        <div
          id="braintree-dropin-container"
        />
      </div>
    </div>
    <div
      className="address_check"
    >
      <label
        className="root"
      >
        <span
          className="icon"
        />
        <input
          checked={false}
          className="input"
          name="addresses_same"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="label"
        >
          Billing address same as shipping address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <span
          className="label"
        >
          Street
        </span>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="street0"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <span
          className="label"
        >
          City
        </span>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region_code"
    >
      <div
        className="root"
      >
        <span
          className="label"
        >
          State
        </span>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="region_code"
              name="region_code"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <span
          className="label"
        >
          ZIP
        </span>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="postcode"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
  </div>
  <div
    className="footer"
  >
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
    <button
      className="button"
      type="submit"
    >
      <span
        className="content"
      >
        Use Card
      </span>
    </button>
  </div>
</form>
`;
